--- a/index.html
+++ b/index.html
@@ -68,23 +68,23 @@ td{
   </div>
 
   <div class="photo">
-    <img src="photo.jpg">
+    <img src="photo.jpg"> 
   </div>
 
   <table>
-    <tr><td><b>Name</b></td><td>: Your Name</td></tr>
-    <tr><td><b>ID No</b></td><td>: ZN001</td></tr>
-    <tr><td><b>Designation</b></td><td>: Reporter</td></tr>
-    <tr><td><b>Area</b></td><td>: Your District</td></tr>
+    <tr><td><b>Name</b></td><td>: Bharat Bhaliya </td></tr>
+    <tr><td><b>ID No</b></td><td>: ZNG001</td></tr>
+    <tr><td><b>Designation</b></td><td>: Editor </td></tr>
+    <tr><td><b>Area</b></td><td>: Your Gujarat</td></tr>
     <tr><td><b>Valid Till</b></td><td>: 31 Dec 2026</td></tr>
   </table>
 
   <div class="status">STATUS : ACTIVE ✔</div>
 
   <div class="footer">
-    Issued by Zest News Media Network<br>
+    Issued by Zest News Gujarati <br>
     Editor: Editor Name<br>
-    Contact: 9XXXXXXXXX
+    Contact: +91 9723543444
   </div>
 
 </div>
