--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ td{
 
   <div class="footer">
     Issued by Zest News Gujarati <br>
-    Editor: Editor Name<br>
-    Contact: +91 9723543444
+    Owner: Name Chintan Ranchodbhai Dhapa<br>
+    Contact: +91 8140723633
   </div>
 
 </div>
