--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ td{
     <tr><td><b>Name</b></td><td>: Bharat Bhaliya </td></tr>
     <tr><td><b>ID No</b></td><td>: ZNG001</td></tr>
     <tr><td><b>Designation</b></td><td>: Editor </td></tr>
-    <tr><td><b>Area</b></td><td>: Your Gujarat</td></tr>
+    <tr><td><b>Area</b></td><td>: Gujarat</td></tr>
     <tr><td><b>Valid Till</b></td><td>: 31 Dec 2026</td></tr>
   </table>
 
