--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ td{
   </div>
 
   <div class="photo">
-    <img src="https://raw.githubusercontent.com/divystudio111-source/press/refs/heads/main/420482746_881685390633341_7152252814228556467_n.jpg"> 
+    <img src="https://raw.githubusercontent.com/divystudio111-source/press/refs/heads/main/IMG_2030.JPG"> 
   </div>
 
   <table>
