--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@ td{
     Contact: +91 8140723633
   </div>
 
+  <div class="photo">
+    <img src="https://raw.githubusercontent.com/divystudio111-source/press/refs/heads/main/IMG_2030.JPG"> 
+  </div>
+
 </div>
 
 </body>
