--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@ td{
   border-top:1px solid #000;
   padding-top:8px;
 }
+
+/* CERTIFICATE IMAGE STYLE */
+.certificate{
+  margin-top:25px;
+  text-align:center;
+}
+.certificate h3{
+  margin-bottom:10px;
+}
+.certificate img{
+  width:100%;
+  max-width:380px;
+  border:1px solid #000;
+  border-radius:8px;
+}
 </style>
 </head>
 
@@ -68,7 +83,7 @@ td{
   </div>
 
   <div class="photo">
-    <img src="https://raw.githubusercontent.com/divystudio111-source/press/refs/heads/main/IMG_2030.JPG"> 
+    <img src="https://raw.githubusercontent.com/divystudio111-source/press/main/IMG_2030.JPG"> 
   </div>
 
   <table>
@@ -85,6 +100,12 @@ td{
     Issued by Zest News Gujarati <br>
     Owner: Name Chintan Ranchodbhai Dhapa<br>
     Contact: +91 8140723633
+  </div>
+
+  <!-- GOVERNMENT CERTIFICATE IMAGE -->
+  <div class="certificate">
+    <h3>Government Certificate</h3>
+    <img src="https://raw.githubusercontent.com/divystudio111-source/press/main/government_certificate.jpg">
   </div>
 
 </div>
