--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ td{
   <!-- GOVERNMENT CERTIFICATE IMAGE -->
   <div class="certificate">
     <h3>Government Certificate</h3>
-    <img src="https://raw.githubusercontent.com/divystudio111-source/press/main/government_certificate.jpg">
+    <img src="https://raw.githubusercontent.com/divystudio111-source/press/refs/heads/main/registrationcertificate%20(3)-1%20copy.JPG">
   </div>
 
 </div>
